fixed dark mode appearance

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -50,6 +50,7 @@ button {
   padding: 0.6em 1.2em;
   font-size: 1em;
   font-weight: 500;
+  color: #000000;
   font-family: inherit;
   background-color: #FFFFFF;
   cursor: pointer;
