--- a/client/src/styles/searchStyle.css
+++ b/client/src/styles/searchStyle.css
@@ -71,7 +71,7 @@
 }
 
 .filterTitle{
-    font-size: 1.2rem;
+    font-size: 1rem;
     font-weight: 600;
     border: 1.5px solid black;
     border-radius: 10px;
